--- a/src/components/TodoList.module.scss
+++ b/src/components/TodoList.module.scss
@@ -1,17 +1,21 @@
 @use "../index";
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lilita+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital,wght@1,300&display=swap");
 .todoListContainer {
   flex-basis: 40%;
   flex-shrink: 0;
   flex-grow: 0;
   border: 2px solid black;
   border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .title {
   text-align: center;
   margin-top: 8px;
+  font-weight: 400;
   font-size: index.$text-base;
-  font-family: "Lilita One";
+  font-family: "Poppins";
   @media (min-width: index.$lg) {
     font-size: index.$text-md;
   }
@@ -20,7 +24,7 @@
   }
 }
 .todoList {
-  height: 150px;
-  padding: 0 8px;
+  height: 120px;
+  padding: 0 32px;
   overflow-y: auto;
 }
